hphp/hack/test/typecheck/xhp_attr_24.php.like_types.exp
File "xhp_attr_24.php", line 3, characters 20-31:
Unbound name: `SomePHPClass` (an object type) (Naming[2049])
File "xhp_attr_24.php", line 8, characters 17-21:
Invalid xhp value for attribute `:bar` in `:foo` (Typing[4343])
File "xhp_attr_24.php", line 4, characters 13-15:
Expected `~?int` because it is an unenforceable type
File "xhp_attr_24.php", line 8, characters 17-21:
But got `string`
